kubernetes/helm/kyverno/kyverno/manifests/add-online-snapshot-label-to-pvc.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-online-snapshot-labels
  annotations:
    policies.kyverno.io/title: Add online snapshot label
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Label
    policies.kyverno.io/description: >-
      Automatically enable online snapshots unless volume has been excluded
spec:
  rules:
    - name: whitelist
      match:
        any:
          - resources:
              kinds: ["PersistentVolumeClaim"]
      exclude:
        any:
          - resources:
              selector:
                matchLabels:
                  snapshot.home.arpa/enabled: "false"
          - resources:
              selector:
                matchLabels:
                  online-snapshot.home.arpa/enabled: "false"
          - resources:
              selector:
                matchLabels:
                  app.kubernetes.io/created-by: "volsync"
          - resources:
              selector:
                matchLabels:
                  release: "loki"
          - resources:
              selector:
                matchLabels:
                  app.kubernetes.io/name: loki
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              +(online-snapshot.home.arpa/enabled): "true"
