kubernetes/helm/kyverno/kyverno/manifests/add-snapshot-label-to-pvc.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-local-snapshot-labels
  annotations:
    policies.kyverno.io/title: Add local snapshot label
    policies.kyverno.io/category: Sample
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Label
    policies.kyverno.io/description: >-
      Automatically enable local snapshots unless volume has been excluded
spec:
  rules:
    - name: whitelist
      match:
        any:
          - resources:
              kinds: ["PersistentVolumeClaim"]
      exclude:
        any:
          - resources:
              selector:
                matchLabels:
                  snapshot.home.arpa/enabled: "false"
          - resources:
              selector:
                matchLabels:
                  app.kubernetes.io/created-by: "volsync"
          - resources:
              selector:
                matchLabels:
                  release: "loki"
          - resources:
              selector:
                matchLabels:
                  app.kubernetes.io/name: loki
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              +(snapshot.home.arpa/enabled): "true"
