kubernetes/helm/kyverno/kyverno/manifests/ingress-apply-internal-annotations.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: update-ingress-annotations
  annotations:
    policies.kyverno.io/title: Update ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates auth annotations on ingresses, external-dns,
      and sets an explicit RFC1918 whitelist for any ingresses
      that are not not exposed to the internet.
spec:
  rules:
    - name: apply-common-ingress-configs
      match:
        any:
          - resources:
              kinds: ["Ingress"]
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(kubernetes.io/tls-acme): "true"
              +(cert-manager.io/cluster-issuer): "prod-issuer"
              +(kubernetes.io/ingress.class): "nginx"
              +(kubernetes.io/ingress-allow-http): "false"
              +(nginx.ingress.kubernetes.io/proxy-read-timeout): "36000"
              +(nginx.ingress.kubernetes.io/proxy-send-timeout): "36000"
              +(nginx.ingress.kubernetes.io/proxy-buffering): "on"
              +(nginx.ingress.kubernetes.io/proxy-buffers-number): "4"
              +(nginx.ingress.kubernetes.io/proxy-buffer-size): "512k"
              +(nginx.ingress.kubernetes.io/proxy-max-temp-file-size): "512m"

    - name: only-access-locally
      match:
        any:
          - resources:
              kinds: ["Ingress"]
      exclude:
        any:
          - resources:
              annotations:
                external-dns.home.arpa/enabled: "true"
          - resources:
              annotations:
                external-dns.home.arpa/proxied: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/whitelist-source-range): "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"

    - name: external-dns
      match:
        any:
          - resources:
              kinds:
                - Ingress
                - Service
              annotations:
                external-dns.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): "ingress.k8s.tylercash.dev"
    - name: external-dns-proxied
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                external-dns.home.arpa/proxied: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.home.arpa/enabled): "true"
              +(external-dns.alpha.kubernetes.io/cloudflare-proxied): "true"
